Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -54,11 +54,11 @@
         }
         \maketitle
         \thispagestyle{empty}
-    	The automatic generation of 3D urban models from geospatial data is now a standard procedure. However, practitioners still have to visually assess, at city-scale, the correctness of these models and detect inevitable reconstruction errors. Such a process relies on experts, and is highly time-consuming (2 h/km$^2$/expert). In this work, we propose an approach for automatically evaluating the quality of 3D building models. Potential errors are compiled in a hierarchical, versatile and parameterizable taxonomy. This allows for the first time to disentangle fidelity and modeling errors, whatever the level of details of the modeled buildings. The quality of models is predicted using the geometric properties of buildings and, when available, image and depth data. A baseline of handcrafted, yet generic features, is fed to a Random Forest classifier. Both multi-class and multi-label cases are considered. Due to the interdependence between classes of errors, we have the ability to retrieve all errors at the same time while predicting erroneous buildings. We tested our framework on an urban area with more than 1,000 building models. We can satisfactorily detect, on average $96\%$ of the most frequent errors.
-        \begin{figure}
+        Bien que la reconstruction automatique de modèles $3D$ urbains à partir de données géospatiales soit communément utilisé, les opérateurs, dans un cadre de production, doivent évaluer visuellement, à l'échelle de la ville, la validité des modèles et détecter des erreurs de modélisation qui sont inévitables. Un tel processus repose sur des experts et prend beaucoup de temps (2 h/km$^2$/expert). Dans ce travail, nous proposons une approche pour évaluer automatiquement la qualité des modèles $3D$ de bâtiments. Les erreurs potentielles sont compilées dans une taxonomie hiérarchique, polyvalente et paramétrable. Cela permet pour la première fois de démêler les erreurs de fidélité et de modélisation, quel que soit le niveau de détail (LoD) des bâtiments modélisés. La qualité des modèles est prédite en utilisant les propriétés géométriques des bâtiments et, le cas échéant, des images géospatiales et des cartes de profondeur. Une Baseline d'attributs génériques et manuellement construits alimente un classificateur de forêt aléatoire. Les cas Multi-classes et Multi-labels sont pris en compte. En raison de l'indépendance entre les classes d'erreurs, nous avons la possibilité de retrouver toutes ces classes en prédisant les bâtiments erronés. En comparant les résultats de notre pipeline sur une plusieurs zones urbaines, nous pouvons détecter de manière satisfaisante, en moyenne, $96\%$ des erreurs les plus fréquentes.
+        \begin{figure}[H]
           \begin{center}
               \includestandalone[mode=buildnew, width=\textwidth]{graphical_abstract}
-             \vspace{-1.3cm} \caption{\label{fig::pipeline} The semantic evaluation paradigm proposal: in addition to the input model topological structure depicted in (b), features are extracted from comparison to height maps, as represented by the difference computed between the model height and the DSM in (c). Images can also be used to characterize models by comparing their projected edges to local gradients (cf. (d)). Based on the computed features, semantic errors affecting the building are predicted using a pretrained classifier.}
+             \caption{\label{fig::pipeline} Notre paradigme d'évaluation sémantique: en plus du modèle topologique illustré en (b), des attributs sont extraits en comparant avec des cartes de hauteur, comme représenté par la différence calculée entre la hauteur du modèle et le Modèle Numérique de Surface en (c). Les images géospatiales peuvent également être utilisées pour caractériser des modèles en comparant leurs projections à des gradients locaux (voir (d)). En se basant sur ces attributs, les erreurs sont prédites à l'aide d'un classificateur préétabli.}
           \end{center}
     	\end{figure}
         \bibliographystyle{abbrv}
