Update on Overleaf.

--- a/presentation.tex
+++ b/presentation.tex
@@ -231,12 +231,12 @@
                 }
             \end{frame}
         \subsection{Summary}
-            \begin{frame}[plain]{Summary}
-                \begin{figure}
-                    \includegraphics[width=\textwidth]{state_of_the_art}
-                    \caption{\label{fig::bib_summary} State of the art summary.}
-                \end{figure}
-            \end{frame}
+%             \begin{frame}[plain]{Summary}
+%                 \begin{figure}
+%                     \includegraphics[width=\textwidth]{state_of_the_art.pdf}
+%                     \caption{\label{fig::bib_summary} State of the art summary.}
+%                 \end{figure}
+%             \end{frame}
             \begin{frame}{The ideal practical qualification paradigm}
                 \begin{itemize}[label=$\blacktriangleright$, font=\color{IGNGreen}, itemsep=2em]
                     \item<1-> No reference data, or at least the most available sensor data;
